<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/main_background_value"
     >
    
    <TextView
        android:id="@+id/login_title_text"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_alignParentTop="true"
    	android:layout_marginTop="30dp"
    	android:text="@string/login"
    	android:textAppearance="?attr/body_text_style_value"
    	android:gravity="center"
        ></TextView> 
    
    <LinearLayout
        android:id="@+id/nick_name_layout"
        android:layout_width="match_parent"
    	android:layout_height="40dp"
    	android:layout_below="@id/login_title_text"
    	android:layout_marginTop="20dp"
        >
        <TextView
        android:id="@+id/nick_name_text"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_weight="7"
    	android:gravity="center"
    	android:text="@string/nick_name"
    	android:textAppearance="?attr/body_text_style_value"
    	
        ></TextView>
    	<EditText
        android:id="@+id/nick_name_edit"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_weight="3"
    	android:hint="@string/name_hint"
    	android:background="?attr/edit_background_value"
    	android:textColor="@color/gray"
        ></EditText>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
    	android:layout_height="40dp"
    	android:layout_below="@id/nick_name_layout"
    	android:layout_marginTop="20dp"
        >
        <TextView
        android:id="@+id/password_text"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_weight="7"
    	android:gravity="center"
    	android:text="@string/password"
        android:textAppearance="?attr/body_text_style_value"
        ></TextView>
		<EditText
	    android:id="@+id/password_edit"
	    android:inputType="textPassword"
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_weight="3"
    	android:hint="@string/password_hint"
    	android:background="?attr/edit_background_value"
    	android:textColor="@color/gray"
	    ></EditText>
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/remember_layout"
        android:layout_width="match_parent"
    	android:layout_height="40dp"
    	android:layout_below="@id/password_layout"
    	android:layout_marginTop="20dp"
    	android:gravity="center"
        >

        <CheckBox
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:button="?attr/check_box_background_value"
             ></CheckBox>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textAppearance="?attr/body_text_style_value"
            ></TextView>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="40dp"
    	android:layout_below="@id/remember_layout"
    	android:layout_marginTop="20dp"
        >

       	<Button
       	    android:id="@+id/login_btn"
       	    android:layout_width="match_parent"
       	    android:layout_height="wrap_content"
       	    android:layout_weight="1"
       	    android:text="@string/login"
       	    android:layout_marginLeft="10dp"
       	    android:layout_marginRight="10dp"
       	    android:background="?attr/button_color_value"
			android:textColor="?attr/button_text_color_value"
       	     ></Button>
        
       	<Button
       	    android:id="@+id/register_btn"
       	    android:layout_width="match_parent"
       	    android:layout_height="wrap_content"
       	    android:layout_weight="1"
       	    android:text="@string/register"
       	    android:layout_marginRight="10dp"
       	    android:background="?attr/button_color_value"
       	    android:textColor="?attr/button_text_color_value"
       	    ></Button>
    </LinearLayout>
    
    <ProgressBar
	    android:id="@+id/login_pro_bar"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	     ></ProgressBar>
    
</RelativeLayout>